k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
          - path: /amember/
            backend:
              serviceName: amember-cluster-ip-service
              servicePort: 80
